--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>MerchantClan</title>
+    <title></title>
 
     <!-- build:css assets/styles/styles.css -->
     <link rel="stylesheet" href="temp/styles/styles.css" />
@@ -552,7 +552,7 @@
     <section class="testimonial__section">
       <div class="container section">
         <div class="row">
-          <div class="col-md-10 mx-auto">
+          <div class="col-md-9 mx-auto">
             <div class="testimonial__wrapper">
               <div
                 class="d-flex flex-wrap align-items-center justify-content-between"
@@ -564,11 +564,11 @@
                   <span
                     class="testimonial__inner-text pl-md-5 pt-4 pt-md-0 d-block"
                   >
-                    &OpenCurlyDoubleQuote; Lorem ipsum dolor sit amet,
-                    consectetur adipiscing elit. Eget. Lorem ipsum dolor sit
-                    amet, consectetur adipiscing elit. Eget. Lorem ipsum dolor
-                    sit amet consectetur adipiscing elit. Eget. Lorem ipsum
-                    dolor sit amet&CloseCurlyDoubleQuote;.
+                    &OpenCurlyDoubleQuote;Lorem ipsum, dolor sit amet
+                    consectetur adipisicing elit. Quam quasi facere labore
+                    doloremque fugit eum possimus quibusdam officia quo expedita
+                    quod aperiam laboriosam id, ratione illo. In ab quidem
+                    esse!&CloseCurlyDoubleQuote;.
                   </span>
 
                   <small
@@ -604,7 +604,7 @@
     <footer class="footer bg-white">
       <div class="container strip__container">
         <div class="row">
-          <div class="col-sm-11 mx-auto">
+          <div class="col-sm-12 mx-auto">
             <div class="strip text-center">
               <h1 class="c-bolder text-white strip__title">
                 Join millions of users today
@@ -615,7 +615,7 @@
                 selcapital & get referral bonus
               </p>
               <div class="text-center mt-4">
-                <button class="btn bg-white btn-custom">
+                <button class="btn bg-white btn-custom text-uppercase">
                   Start saving today
                 </button>
               </div>
@@ -636,7 +636,9 @@
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Orci
                 sociis porttitor varius neque viverra.
               </li>
-              <li class="d-flex align-items-center justify-content-center justify-content-sm-start">
+              <li
+                class="d-flex align-items-center justify-content-center justify-content-sm-start"
+              >
                 <a
                   href=""
                   class="footer__social-link d-flex justify-content-center align-items-center mr-2"
