--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,9 @@
             <div class="menu">
               <!-- <a href="" class="nav__link ml-5">About Us</a> -->
 
-              <a href="" class="nav__link nav__link--js ml-5">About</a>
+              <a href="about.html" class="nav__link nav__link--js ml-5"
+                >About
+              </a>
               <a href="" class="nav__link nav__link--js ml-5">Save</a>
               <a href="" class="nav__link ml-5">Invest</a>
               <a href="" class="nav__link ml-5">Blog</a>
@@ -44,7 +46,7 @@
           </div>
 
           <div class="nav__menu">
-            <a
+            <!-- <a
               href="#how-it-works"
               class="mx-auto text-center nav__link nav__link--js nav__link--mobile nav__link--active"
             >
@@ -60,7 +62,7 @@
               class="mx-auto text-center nav__link nav__link--mobile nav__link--active"
             >
               Contact Us
-            </a>
+            </a> -->
           </div>
         </div>
       </nav>
@@ -69,7 +71,7 @@
         <div
           class="d-flex flex-column flex-md-row align-items-center justify-content-between c-header__inner"
         >
-          <div class="c-header__text-container order-2 order-md-1">
+          <div class="c-header__text-container order-2 order-md-1 pt-md-5">
             <h1 class="c-bold c-header__title pb-3">
               NO 1. platform <br class="d-none d-md-block" />for your savings
               <br class="d-none d-md-block" />& investment
