--- a/app/index.html
+++ b/app/index.html
@@ -26,14 +26,18 @@
             <div class="menu">
               <!-- <a href="" class="nav__link ml-5">About Us</a> -->
 
-              <a href="" class="nav__link nav__link--js ml-5">About</a>
-              <a href="" class="nav__link nav__link--js ml-5">Save</a>
-              <a href="" class="nav__link ml-5">Invest</a>
+              <a href="about.html" class="nav__link nav__link--js ml-5"
+                >About</a
+              >
+              <a href="savings.html" class="nav__link nav__link--js ml-5"
+                >Save</a
+              >
+              <a href="invest.html" class="nav__link ml-5">Invest</a>
               <a href="" class="nav__link ml-5">Blog</a>
               <a href="" class="nav__link ml-5">FAQ</a>
-              <a href="" class="nav__link ml-5">Sign In</a>
+              <a href="login.html" class="nav__link ml-5">Sign In</a>
               <a
-                href=""
+                href="Signup.html"
                 class="nav__link ml-5 btn btn-sm btn-custom btn-outline-success c-header__btn text-success"
                 >Create a free Account</a
               >
@@ -125,7 +129,7 @@
           </div>
           <div class="col-md-4">
             <h2 class="c-title__bigger pb-5 pb-md-0">
-              NO 1. platform for your savings & investment
+              Get started &amp; make your money work for you
             </h2>
           </div>
           <div class="col-md-4">
@@ -139,8 +143,8 @@
               <div class="pb-4 pb-md-0">
                 <h5>Save money</h5>
                 <p class="pr-sm-2">
-                  Plan for your future with our range of savings accounts and
-                  you konw
+                  When you’re on top of your money, life is good. We help you
+                  effortlessly manage your finances in one place.
                 </p>
               </div>
             </div>
@@ -156,8 +160,8 @@
               <div class="pb-4 pb-md-0">
                 <h5>Invest money</h5>
                 <p class="pr-sm-2">
-                  Plan for your future with our range of savings accounts and
-                  you konw
+                  Invest your way into millions with variety of investment
+                  opportuinities to choose from.
                 </p>
               </div>
             </div>
@@ -174,16 +178,15 @@
               <div
                 class="c-title text-success d-inline-block text-uppercase mb-4"
               >
-                save &amp; invest
+                Awesome stuff
               </div>
               <h2 class="c-title__bigger pb-md-0 text-center">
-                Make your money work <br class="d-none d-sm-block" />
-                for you in 3 easy steps
+                Intuitive features, powerful results
               </h2>
               <p class="c-lead-inline pt-3">
-                Plan for your future with our range of savings accounts
+                SelCapital is versatile enough to help anyone’s money
                 <br class="d-none d-sm-block" />
-                & medium-to-long term investment options
+                make sense without much effort.
               </p>
             </div>
           </div>
@@ -213,10 +216,10 @@
                   1</span
                 >
                 <div class="pt-2">
-                  <h5>Plan your savings</h5>
+                  <h5>Mobile transactions</h5>
                   <p>
-                    Plan for your future with our range of savings accounts and
-                    medium-to-long hope by force now to work
+                    Custom accounts that makes for unlimited payments and
+                    withdrawals on the go.
                   </p>
                 </div>
               </div>
@@ -227,10 +230,10 @@
                   2</span
                 >
                 <div class="pt-2">
-                  <h5>Plan your savings</h5>
+                  <h5>Saving &amp; Investing made awesome</h5>
                   <p>
-                    Plan for your future with our range of savings accounts and
-                    medium-to-long hope by force now to work
+                    Grow your savings &amp; automatically & experience the
+                    flexibility of online investment.
                   </p>
                 </div>
               </div>
@@ -241,10 +244,10 @@
                   3</span
                 >
                 <div class="pt-2">
-                  <h5>Plan your savings</h5>
+                  <h5>Serious security</h5>
                   <p>
-                    Plan for your future with our range of savings accounts and
-                    medium-to-long hope by force now to work
+                    SelCapital uses secure processes to protect your information
+                    and help prevent unauthorized use.
                   </p>
                 </div>
               </div>
@@ -269,11 +272,13 @@
         <div class="row">
           <div class="col-12">
             <div class="text-center mx-auto">
-              <h2 class="c-title__bigger pb-md-0 text-center">Main Features</h2>
+              <h2 class="c-title__bigger pb-md-0 text-center">
+                Why SelCapital
+              </h2>
               <p class="c-lead-inline pt-3">
-                Plan for your future with our range of savings accounts
+                SelCapital is free for 30 days,
                 <br class="d-none d-sm-block" />
-                & medium-to-long term investment options
+                make your savings count.
               </p>
             </div>
           </div>
@@ -290,7 +295,7 @@
                 </span>
                 <h6>Automated Savings</h6>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet.
+                  You just need to set once, and watch Selcapital do the rest
                 </p>
               </div>
               <div
@@ -299,10 +304,8 @@
                 <span class="feat__icon">
                   <img src="assets/images/svg/custom.svg" alt="" />
                 </span>
-                <h6>Customizable Savings Goals</h6>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet.
-                </p>
+                <h6>Unlimited Savings Goals</h6>
+                <p>Sel Capital helps you manages all your savings goals</p>
               </div>
               <div
                 class="feat bg-white text-center pl-4 pr-4 pb-2 position-relative"
@@ -311,9 +314,7 @@
                   <img src="assets/images/svg/bills.svg" alt="" />
                 </span>
                 <h6>Overdraft Protection</h6>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet.
-                </p>
+                <p>Automatic transfers to your checking.</p>
               </div>
               <div
                 class="feat bg-white text-center pl-4 pr-4 pb-2 position-relative"
@@ -321,10 +322,8 @@
                 <span class="feat__icon">
                   <img src="assets/images/svg/percentage.svg" alt="" />
                 </span>
-                <h6>High Interest Rate</h6>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet.
-                </p>
+                <h6>Saving points</h6>
+                <p>Get paid for saving every 3 months.</p>
               </div>
               <div
                 class="feat bg-white text-center pl-4 pr-4 pb-2 position-relative"
@@ -333,7 +332,7 @@
                   <img src="assets/images/svg/card.svg" alt="" />
                 </span>
 
-                <h5>Easy Payment &amp; Withdrawal</h5>
+                <h6>Easy Payment &amp; Withdrawal</h6>
                 <p>Seamless payment using your debit/credit card.</p>
               </div>
               <div
@@ -342,8 +341,8 @@
                 <span class="feat__icon">
                   <img src="assets/images/svg/shield.svg" alt="" />
                 </span>
-                <h5>Secured Transactions</h5>
-                <p>Seamless payment using your debit/credit card.</p>
+                <h6>Secured Transactions</h6>
+                <p>The fee is on us if SelCapital saves too much..</p>
               </div>
             </div>
           </div>
@@ -570,8 +569,8 @@
                 STORIES
               </div>
               <h2 class="c-title__bigger pb-5 text-center">
-                Make your money work <br class="d-none d-sm-block" />
-                for you in 3 easy steps
+                What our members are <br class="d-none d-sm-block" />
+                saying about us
               </h2>
             </div>
           </div>
@@ -654,7 +653,12 @@
               >
                 <div class="c-input__container px-2">
                   <img src="assets/images/svg/mail.svg" class="mx-2" alt="" />
-                  <input type="text" class="c-input" placeholder="Email" />
+                  <input
+                    type="text"
+                    class="c-input"
+                    placeholder="Email"
+                    autocomplete="off"
+                  />
                 </div>
                 <button
                   class="btn btn-primary btn-custom text-white ml-md-2 shadow mt-3 mt-md-0"
